fixed style on IE

--- a/src/main/webapp/css/tabber.css
+++ b/src/main/webapp/css/tabber.css
@@ -18,6 +18,7 @@ border-radius:8px;
 -webkit-box-shadow:0px 0px 3px #aaa;
 box-shadow:0px 0px 3px #aaa;
 progid:DXImageTransform.Microsoft.dropshadow(OffX=3, OffY=3, Color='#aaa');
+background-color:#96c864;
 background:
     -webkit-gradient(
     linear,
@@ -40,11 +41,6 @@ background-image:
 	rgb(150,200,100)  9%,
 	rgb(150,200,100)  55%,
 	rgb(182,222,143)  78%
-	);
-filter:progid:DXImageTransform.Microsoft.gradient(
-	GradientType=0,
-	startColorstr=#b6de8f,
-	endColorstr=#96c864
 	);
 }
 ul.tabbernav li
@@ -87,6 +83,7 @@ color:#fff;
 text-shadow:1px 1px 1px #666;
 text-decoration: none;
 font-size:14px;
+background-color:#96c864;
 background:
     -webkit-gradient(
     linear,
@@ -111,10 +108,10 @@ background-image:
 	rgb(182,222,143)  78%
 	);
 filter:progid:DXImageTransform.Microsoft.gradient(
-	GradientType=0,
-	startColorstr=#b6de8f,
-	endColorstr=#96c864
-	);
+    	GradientType=0,
+   		startColorstr=#b6de8f,
+    	endColorstr=#96c864
+    	);
 }
 ul.tabbernav li a:link { 
 color: #fff; 
@@ -128,7 +125,7 @@ text-shadow:1px 1px 1px #333;
 ul.tabbernav li.tabberactive a
 {
 color: #fff;
-background:#969696;
+background:#b4b4b4;
 text-shadow:1px 1px 1px #333;
 background:
     -webkit-gradient(
@@ -154,15 +151,15 @@ background-image:
 	rgb(200,200,200)  78%
 	);
 filter:progid:DXImageTransform.Microsoft.gradient(
-	GradientType=0,
-	startColorstr=#c8c8c8,
-	endColorstr=#969696
-	);
+    	GradientType=0,
+   		startColorstr=#dcdcdc,
+    	endColorstr=#b4b4b4
+    	);
 }
 ul.tabbernav li.tabberactive a:hover
 {
 color: #fff;
-background:#969696;
+background:#b4b4b4;
 text-shadow:1px 1px 1px #333;
 background:
     -webkit-gradient(
@@ -196,7 +193,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(
 ul.tabbernav li a:hover
 {
 color: #fff;
-background:#969696;
+background:#b4b4b4;
 text-shadow:1px 1px 1px #333;
 background:
     -webkit-gradient(
